example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "ttt"
    pingdom.controller.yad2/create-check: "true"
    pingdom.controller.yad2/custom-path: /
    pingdom.controller.yad2/integrationids: ""
    pingdom.controller.yad2/protocol: http
    pingdom.controller.yad2/probe-filters: EU
  name: pingdom-controller
spec:
  rules:
    - host: my.domain.io
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: https
            path: /
