example/ingress_https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-controller-internal
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    pingdom.controller.yad2/apply: "true"
    pingdom.controller.yad2/resolution: "1"
    pingdom.controller.yad2/custom-path: /custom # optional
    pingdom.controller.yad2/encryption: "true" # optional
    pingdom.controller.yad2/integrationids: "" # optional
    pingdom.controller.yad2/probe-filters: "region: EU" # optional
    pingdom.controller.yad2/port: "443" # optional
    pingdom.controller.yad2/teamids: "" # optional
    pingdom.controller.yad2/paused: "false" # optional
    pingdom.controller.yad2/verify-certificate: "true" # optional
  name: pingdom-controller
spec:
  rules:
    - host: my.domain.io
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: https
            path: /
