example/ingress_minimalist.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    pingdom.controller.yad2/apply: "true"
    pingdom.controller.yad2/resolution: "1"
  name: pingdom-controller
spec:
  rules:
    - host: my.domain.io
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: http
            path: /
